Fix banner alignment, increase font size

--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,12 @@ body {
 }
 
 html {
-  background-color: rgba(7, 153, 146, 1);
+  background: rgba(34, 112, 147, 1);
 }
 
 body {
   background: linear-gradient(
-    to bottom right,
+    to bottom,
     rgba(0, 184, 148, 1),
     rgba(34, 112, 147, 1)
   );
@@ -103,7 +103,7 @@ h1 {
 .link {
   border-bottom: 0.1rem solid transparent;
   color: rgba(126, 214, 223, 1);
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   padding-bottom: 0.1rem;
   text-decoration: none;
   max-width: 100%;
@@ -138,9 +138,9 @@ main {
   background-image: url("../images/landscape-1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center 85%;
   border-radius: 0.5rem;
-  height: 430px;
+  height: 45vh;
   margin: 0.5rem;
   animation: banner 20s ease-in-out 0s infinite;
 }
@@ -165,13 +165,9 @@ main {
 .text {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   color: rgba(255, 255, 255, 1);
-  font-size: 1.6rem;
   height: 100%;
-  letter-spacing: 0.2rem;
-  line-height: 1.5rem;
-  margin: 1.5rem 0;
   text-align: center;
 }
 
@@ -179,6 +175,10 @@ main {
   background-color: rgba(44, 62, 80, 0.8);
   border-radius: 0.5rem;
   content: "Family business for 20 years";
+  font-size: 1.8rem;
+  letter-spacing: 0.2rem;
+  line-height: 1.8rem;
+  margin: 2rem 0;
   padding: 0.5rem;
   animation: text 20s ease-in-out 0s infinite;
 }
@@ -204,37 +204,46 @@ main {
   width: 100%;
 }
 
-h3 {
-  color: rgba(247, 241, 227, 1);
-  font-size: 1.6rem;
-  letter-spacing: 0.2rem;
-  line-height: 1.5rem;
-  margin: 1.5rem 0;
-  text-align: center;
-}
-
 .section-2 article {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   background-color: rgba(44, 62, 80, 1);
   border-radius: 0.5rem;
   color: rgba(85, 239, 196, 1);
   flex: 1;
   margin: 0.5rem;
-  padding: 0.5rem;
+  padding: 0 1rem 1rem;
   overflow: auto;
   text-align: left;
 }
 
+h3 {
+  color: rgba(247, 241, 227, 1);
+  font-size: 1.6rem;
+  letter-spacing: 0.2rem;
+  line-height: 2rem;
+  margin: 1.5rem 0;
+  text-align: center;
+}
+
+.transparent {
+  opacity: 0;
+  visibility: hidden;
+}
+
 article p {
-  font-size: 0.5rem;
-  line-height: 1.3rem;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
 }
 
 /* Article Image Hover Animation */
 .icon {
+  display: block;
   border-radius: 50%;
   cursor: pointer;
-  display: block;
-  margin: 0 auto 0.5rem;
+  margin: 0 auto 1.5rem;
 }
 
 .icon:hover {
@@ -258,14 +267,14 @@ footer {
   justify-content: center;
   align-items: center;
   background-color: rgba(45, 52, 54, 1);
-  padding: 0.5rem 0;
+  padding: 0.8rem 0;
   bottom: 0;
   width: 80vw;
 }
 
 footer div {
   color: rgba(240, 255, 255, 1);
-  font-size: 1rem;
+  font-size: 1.3rem;
 }
 
 footer div:first-of-type {
@@ -278,13 +287,13 @@ footer div:nth-child(2) {
 
 .copy {
   display: inline-block;
-  font-size: 1rem;
+  font-size: 1.1rem;
   margin: 0 0.2rem;
 }
 
 .phone {
   display: block;
-  font-size: 0.7rem;
+  font-size: 1.2rem;
   letter-spacing: 0.2rem;
   margin: 0.5rem 0;
 }
